Die generierten Datein werden noch nicht in die richtigen fpade geschrieben.

--- a/test-files/customised-rpm-repo.conf
+++ b/test-files/customised-rpm-repo.conf
@@ -1,62 +1,43 @@
 --- !ruby/object:RPMinjection
 buildList:
 - !ruby/object:BuildJob
-  bulidName: assemblyhall
-  buldFiles:
+  buildName: assemblyhall
+  buildFiles:
   - !ruby/object:BulidFile
-    filePath: /files/etc/yum.repos.d/customised_rpms.repo.template
+    filePath: ./test-files/files/etc/yum.repos.d/customised_rpms.repo.template
     substituts:
-    - !ruby/object:Substitute
-      key: SERVER-IP
-      value: 192.168.5.146
-    - !ruby/object:Substitute
-      key: TARGET_SYSTEM
-      value: assemblyhall
+      SERVER-IP: 192.168.5.146
+      TARGET_SYSTEM: assemblyhall
 - !ruby/object:BuildJob
-  bulidName: intigration
-  buldFiles:
+  buildName: intigration
+  buildFiles:
   - !ruby/object:BulidFile
-    filePath: /files/customised_rpmrepos.spec
+    filePath: ./test-files/files/customised_rpmrepos.spec
     substituts:
-    - !ruby/object:Substitute
-      key: SERVER-IP
-      value: 168.192.3.3
-    - !ruby/object:Substitute
-      key: TARGET_SYSTEM
-      value: intigration
+      SERVER-IP: 168.192.3.3
+      TARGET_SYSTEM: intigration
 - !ruby/object:BuildJob
-  bulidName: hotfix
-  buldFiles:
+  buildName: hotfix
+  buildFiles:
   - !ruby/object:BulidFile
-    filePath: /files/customised_rpmrepos.spec
+    filePath: ./test-files/files/customised_rpmrepos.spec
     substituts:
-    - !ruby/object:Substitute
-      key: SERVER-IP
-      value: 168.192.3.3
-    - !ruby/object:Substitute
-      key: TARGET_SYSTEM
-      value: hotfix
+      SERVER-IP: 168.192.3.3
+      TARGET_SYSTEM: hotfix
 - !ruby/object:BuildJob
-  bulidName: qa
-  buldFiles:
+  buildName: qa
+  buildFiles:
   - !ruby/object:BulidFile
-    filePath: /files/customised_rpmrepos.spec
+    filePath: ./test-files/files/customised_rpmrepos.spec
     substituts:
-    - !ruby/object:Substitute
-      key: SERVER-IP
-      value: 168.192.3.3
-    - !ruby/object:Substitute
-      key: TARGET_SYSTEM
-      value: qa
+      SERVER-IP: 168.192.3.3
+      TARGET_SYSTEM: qa
 - !ruby/object:BuildJob
-  bulidName: preview
-  buldFiles:
+  buildName: preview
+  buildFiles:
   - !ruby/object:BulidFile
-    filePath: /files/customised_rpmrepos.spec
+    filePath: ./test-files/files/customised_rpmrepos.spec
     substituts:
-    - !ruby/object:Substitute
-      key: SERVER-IP
-      value: 168.192.3.3
-    - !ruby/object:Substitute
-      key: TARGET_SYSTEM
-      value: preview
+      SERVER-IP: 168.192.3.3
+      TARGET_SYSTEM: preview
+buildDir: ./build
