umbau der Verzeichnisstrucktur.

--- a/test-files/customised-rpm-repo.conf
+++ b/test-files/customised-rpm-repo.conf
@@ -4,40 +4,86 @@ buildList:
   buildName: assemblyhall
   buildFiles:
   - !ruby/object:BulidFile
-    filePath: ./test-files/files/etc/yum.repos.d/customised_rpms.repo.template
+    filePath: test-files/files/etc/yum.repos.d/customised_rpms.repo.template
     substituts:
       SERVER-IP: 192.168.5.146
+      TARGET_SYSTEM: assemblyhall
+  - !ruby/object:BulidFile
+    filePath: test-files/files/customised_rpmrepos.spec
+    substituts:
+      VERSION: '14'
+      REALEASE: '1'
       TARGET_SYSTEM: assemblyhall
 - !ruby/object:BuildJob
   buildName: intigration
   buildFiles:
   - !ruby/object:BulidFile
-    filePath: ./test-files/files/customised_rpmrepos.spec
+    filePath: test-files/files/etc/yum.repos.d/customised_rpms.repo.template
     substituts:
       SERVER-IP: 168.192.3.3
+      TARGET_SYSTEM: intigration
+  - !ruby/object:BulidFile
+    filePath: test-files/files/customised_rpmrepos.spec
+    substituts:
+      VERSION: '14'
+      REALEASE: '1'
       TARGET_SYSTEM: intigration
 - !ruby/object:BuildJob
   buildName: hotfix
   buildFiles:
   - !ruby/object:BulidFile
-    filePath: ./test-files/files/customised_rpmrepos.spec
+    filePath: test-files/files/etc/yum.repos.d/customised_rpms.repo.template
     substituts:
       SERVER-IP: 168.192.3.3
+      TARGET_SYSTEM: hotfix
+  - !ruby/object:BulidFile
+    filePath: test-files/files/customised_rpmrepos.spec
+    substituts:
+      VERSION: '14'
+      REALEASE: '1'
       TARGET_SYSTEM: hotfix
 - !ruby/object:BuildJob
   buildName: qa
   buildFiles:
   - !ruby/object:BulidFile
-    filePath: ./test-files/files/customised_rpmrepos.spec
+    filePath: test-files/files/etc/yum.repos.d/customised_rpms.repo.template
     substituts:
       SERVER-IP: 168.192.3.3
       TARGET_SYSTEM: qa
+  - !ruby/object:BulidFile
+    filePath: test-files/files/customised_rpmrepos.spec
+    substituts:
+      VERSION: '14'
+      REALEASE: '1'
+      TARGET_SYSTEM: qa
 - !ruby/object:BuildJob
-  buildName: preview
+  buildName: vorschau
   buildFiles:
   - !ruby/object:BulidFile
-    filePath: ./test-files/files/customised_rpmrepos.spec
+    filePath: test-files/files/etc/yum.repos.d/customised_rpms.repo.template
     substituts:
       SERVER-IP: 168.192.3.3
+      TARGET_SYSTEM: vorschau
+  - !ruby/object:BulidFile
+    filePath: test-files/files/customised_rpmrepos.spec
+    substituts:
+      VERSION: '14'
+      REALEASE: '1'
       TARGET_SYSTEM: preview
+- !ruby/object:BuildJob
+  buildName: qaa
+  buildFiles:
+  - !ruby/object:BulidFile
+    filePath: test-files/files/etc/yum.repos.d/customised_rpms.repo.template
+    substituts:
+      SERVER-IP: 168.192.3.3
+      TARGET_SYSTEM: qaa
+  - !ruby/object:BulidFile
+    filePath: test-files/files/customised_rpmrepos.spec
+    substituts:
+      VERSION: '14'
+      REALEASE: '1'
+      TARGET_SYSTEM: qaa
 buildDir: ./build
+rpmName: customised_rpmrepos
+versionNo: '14'
