--- a/bin/resources/Makefile.am.template
+++ b/bin/resources/Makefile.am.template
@@ -1,7 +1,5 @@
-SUBDIRS=src  utest
+SUBDIRS=src
 
 ACLOCAL_AMFLAGS = -I m4 --install
 
-EXTRA_DIST = peruschim_cpp.spec \
-             exsamples/peruschim_cpp.conf \
-             README.DE
+EXTRA_DIST = {{EXTRA_DIST}}
