--- a/bin/resources/configure.ac.template
+++ b/bin/resources/configure.ac.template
@@ -1,4 +1,4 @@
-AC_INIT(peruschim_cpp, 1, [Olaf Radicke <briefkasten@olaf-radicke.de>])
+AC_INIT(peruschim_cpp, 1, [{{EMAILADRESS}}])
 AM_INIT_AUTOMAKE
 AC_CONFIG_MACRO_DIR([m4])
 
